menu z-index fix, dropdown fix

--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -883,6 +883,7 @@
       margin-top: -25px
     .dropdown
       margin-top: -5px
+      margin-bottom: 14px
       padding: 0px 26px 0
       height: 0
       cursor: pointer
@@ -987,6 +988,17 @@
     font-weight: 600
     color: $fontColor
     margin: 0px 0 11px
+  .view .form form input.hidden
+    margin: 0
+    padding: 0
+    border: none
+    line-height: 0
+    font-size: 0
+    width: 0
+    height: 0
+    position: absolute
+
+
 
   .input-field__validation
     display: inline-block
