--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -35,7 +35,7 @@
 
 .menu
   background: white
-  z-index: 1010
+  z-index: 800
   position: fixed
   top: 0
   margin: 0
